      http://tools.ietf.org/html/draft-mahalingam-dutt-dcops-vxlan-02).
    - With the Linux datapath, packets for new flows are now queued
      separately on a per-port basis, so it should no longer be
      possible for a large number of new flows arriving on one port to
      prevent new flows from being processed on other ports.
    - New "vlog/disable-rate-limit" and "vlog/enable-rate-limit" commands
      available through ovs-appctl allow control over logging rate limits.
    - The OpenFlow "dp_desc" may now be configured by setting the value of 
      other-config:dp-desc in the Bridge table.
    - Path MTU discovery is no longer supported.
    - Backward-incompatible changes:
      - Earlier Open vSwitch versions treated ANY as a wildcard in flow
        syntax.  OpenFlow 1.1 adds a port named ANY, which introduces a
        conflict.  ANY was rarely used in flow syntax, so we chose to
        retire that meaning of ANY in favor of the OpenFlow 1.1 meaning.
    - Inheritance of the Don't Fragment bit in IP tunnels (df_inherit) is
      no longer supported.


v1.9.0 - xx xxx xxxx
--------------------
    - The tunneling code no longer assumes input and output keys are symmetric.
      If they are not, PMTUD needs to be disabled for tunneling to work. Note
      this only applies to flow-based keys.
    - Datapath:
      - Support for ipv6 set action.
      - SKB mark matching and setting.
      - support for Linux kernels up to 3.8
    - FreeBSD is now a supported platform, thanks to code contributions from
      Gaetano Catalli, Ed Maste, and Giuseppe Lettieri.
    - ovs-bugtool: New --ovs option to report only OVS related information.
    - New %t and %T log escapes to identify the subprogram within a
      cooperating group of processes or threads that emitted a log message.
      The default log patterns now include this information.
    - OpenFlow:
      - Allow bitwise masking for SHA and THA fields in ARP, SLL and TLL